styles.css
html {
    min-width: 600px;
}

body {
    font-family: "Comic Sans MS", Arial, sans-serif;
    margin: 0;
    padding: 0;
    background-color: #f1f1f1;
}

.page-container {
    display: grid;
    grid-template-rows: 1fr auto; /* 1fr for the main content and auto for the footer */
    min-height: 85vh; /* 100vh = 100% of the viewport height */
    align-items: center;
    justify-content: center;
}

header {
    background-color: rgb(131, 104, 204);
    color: rgb(255, 255, 255);
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0px;
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
    min-height: 100px;
    max-height: 100px;
    min-width: 300px;
}

header a {
    color: white;
    text-decoration: none;
    margin-right: 20px;
    font-size: 18px;
    padding: 10px;
    transition: all 0.2s ease-in-out;
}

header h1 {
    margin: 0;
    margin-left: 20px;
    font-size: 36px;
    font-weight: bold;
    color: #ffffff;
}

header div a h1{
    color:rgb(255, 255, 255);
    font-family: "Comic Sans MS";
    min-width: 300px;
}

#dark-mode-switch h3 {
    font-size: 20px; 
    margin: 0px; 
    margin-bottom: 2px; 
    min-width: 120px;
}

header nav a:hover {
    background-color: #5b9cfd;
    color: rgb(255, 255, 255);
}

header nav a {
    border-radius: 15px;
}

header nav {
    display: flex;
    margin-left: auto; /* pushes the nav bar to the right */
}

header #login-link, header #signup-link {
    margin-right: 20px;
}

@media (max-width: 600px) {
    #close-button {
        display: block;
        position: absolute;
        top: 10px;
        right: 10px;
        color: #000;
    }
}

main {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 20px;
    gap: 20px;
    align-items: center;
}

#featured-manhwa {
    display: flex;
    background-color: white;
    flex-direction: column;
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
    overflow: hidden;
    flex-wrap: wrap;
    min-width: 900px;
}

#featured-manhwa img {
    width: 200px;
    height: 300px;
    border-radius: 10px;
    border: 3px solid black;
    transition: all 0.1s ease-in-out;
}

#featured-manhwa .box:hover {
    transform: scale(1.05);
}

#featured-manhwa .box {
    transition: transform 200ms ease-in-out 20ms
}

#featured-manhwa h3,
#featured-manhwa p {
    color: #000000;
    max-width: 200px;
}

#featured-manhwa .box,
#latest-chapters a {
    text-decoration: none;
    color: #29549e;
}

#latest-chapters h3,
#latest-chapters p,
#latest-chapters a  {
    margin: 3px;
}

#featured-manhwa h2 {
    margin-bottom: 20px;
    font-size: 38px;
    text-align: center;
    text-transform: uppercase;
}

#featured-manhwa li {
    list-style: none;
    margin-bottom: 20px;
    display: flex;
}

#featured-manhwa ul{
    display: flex;
    list-style: none;
    justify-content: center;
    gap: 30px;
    margin-bottom: 20px;
    padding-inline-start: 3%;
    padding-inline-end: 3%;
    flex-wrap: wrap;
}

#featured-manhwa p, 
#featured-manhwa h3 {
    text-align: center;
    margin: 0%;
}

#latest-chapters {
    /* width: 30%; */
    background-color: white;
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
    margin-bottom: 25px;
    min-width: 900px;
}

#latest-chapters h2 {
    margin-bottom: 20px;
    font-size: 38px;
    text-align: center;
    text-transform: uppercase;
}

#latest-chapters li {
    list-style: none;
    margin-bottom: 20px;
}

footer {
    background-color: #333;
    color: white;
    padding: 20px;
    text-align: center;
    font-size: 18px;
    grid-row: 2;
}

.page-container > main {
    grid-row: 1;
}

header .title a:hover {
    background-color: none;
    color: inherit;
    border-radius: 0;
}

#menu-icon {
    display: none;
}

@media only screen and (max-width: 1070px) {
    #menu-icon {
        display: block;
    }
}

@media only screen and (max-width: 1070px) {
    #nav-options {
        display: none;
    }
}

#dropdown-menu {
    position: absolute;
    background-color: rgb(255, 255, 255);
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
    border: 1.5px solid rgb(136, 99, 228);
    border-radius: 10px;
    top: 10px;
    right: 10px;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#dropdown-menu #close {
    text-align: center;
    color: rgb(255, 255, 255);
    background-color: rgb(184, 163, 236);
    font-size: 12px;
    padding: 0%;
    margin: 0%;
    margin-top: 8px;
    border: 2px;
    border-radius: 2px;
    border-style: solid;
    border-color: rgb(136, 99, 228);
    width: 60px;
    height: 16px;
}

#dropdown-menu #top {
    margin-top: 0px;
    padding-top: 8px;
}

#dropdown-menu a {
    text-align: center;
    padding: 5px 16px;
    margin: 8px 0;
    display: block;
    font-size: 18px;
    font-weight: bold;
    color: #333;
    text-decoration: none;
}

#dropdown-menu a:hover {
    background-color: #f1f1f1;
    color: #000;
}


/* manhwa.html */
#all-manhwa {
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: center;
    --all-manhwa_red: rgba(247, 120, 120, 0.678);
    --all-manhwa_blue: rgba(138, 177, 248, 0.678);
    --all-manhwa_orange: rgba(253, 201, 152, 0.658);
    --all-manhwa_yellow: rgba(255, 253, 111, 0.664);
    --all-manhwa_main: rgba(243, 243, 243, 0.548);
}

#all-manhwa #sorting-header {
    width: 80%;
    display: flex;
    align-items: center;
    flex-direction: row;
    justify-content: center;
    flex-wrap: wrap;
    gap: 20px;
}

#all-manhwa #center-options .search{
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
}
/* ... */

